Clarify and expand author attributes list
Reorder entries and improve attribute descriptions. Add social handle
fields: threads, bluesky, mastodon, tiktok, youtube, instagram and
linkedin. Clarify slug, id, url and meta fields

--- a/themes/helpers/data/authors.mdx
+++ b/themes/helpers/data/authors.mdx
@@ -90,19 +90,26 @@ If you want to output your authors completely differently, you can fully customi
 
 ### List of author attributes
 
-* **id** - the incremental ID of the author
-* **name** - the name of the author
-* **slug** - slugified version of the name (used in urls and also useful for class names)
-* **bio** - a bio of the author
-* **website** - the website of the author
-* **location** - the location of the author
-* **twitter** - the author’s twitter username
-* **facebook** - the author’s facebook username
-* **profile\_image** - the profile image for the author
-* **cover\_image** - the cover image for the author
-* **meta\_title** - the tag’s meta title
-* **meta\_description** - the tag’s meta description
-* **url** - the web address for the tag’s page
+* **slug** - Unique URL-friendly identifier for the author. Used in routing.
+- **id** - Unique database identifier for the author.
+- **name** - Full display name of the author.
+- **profile_image** - URL of the author's profile avatar image.
+- **cover_image** - URL of the author's cover/banner image.
+- **bio** - Short biography or description of the author.
+- **website** - Personal website or portfolio link.
+- **location** - Author’s geographical location.
+- **facebook** - Facebook username (without full URL).
+- **twitter** - Twitter/X handle.
+- **threads** - Threads profile username.
+- **bluesky** - Bluesky handle.
+- **mastodon** - Mastodon handle or full URL.
+- **tiktok** - TikTok username.
+- **youtube** - YouTube channel handle.
+- **instagram** - Instagram username.
+- **linkedin** - LinkedIn username.
+- **meta_title** - Custom SEO title for the author page.
+- **meta_description** - Custom SEO description for the author page.
+- **url** - Absolute URL to the author’s public profile page.
 
 ## primary\_author
 
