--- a/themes/helpers/data/authors.mdx
+++ b/themes/helpers/data/authors.mdx
@@ -90,7 +90,7 @@ If you want to output your authors completely differently, you can fully customi
 
 ### List of author attributes
 
-* **slug** - Unique URL-friendly identifier for the author. Used in routing.
+- **slug** - Unique URL-friendly identifier for the author. Used in routing.
 - **id** - Unique database identifier for the author.
 - **name** - Full display name of the author.
 - **profile_image** - URL of the author's profile avatar image.
